--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,20 @@
 .App {
-  text-align: center;
+  display: flex;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu {
+  width: 20%;
+  margin-left: 1%;
+}
+
+.Button {
+  margin: 5%;
+  margin-left: 1%;
+}
+
+.ant-row{
+  width: 70%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
